--- a/Exercicios/exc_013/index.html
+++ b/Exercicios/exc_013/index.html
@@ -12,7 +12,7 @@
         <nav class="navegacao">
             <ul class="lista01">
                 <li class="option"><a href="pag_home.html" target="_self" class="links">HOME</a></li>
-                <li class="option"><a href="pag_blog.html" target="_self" class="links">BLOG</a></li>
+                <li class="option"><a href="index.html" target="_self" class="links">BLOG</a></li>
                 <li class="option"><a href="pag_games.html" target="_self" class="links">GAMES</a></li>
             </ul>
         </nav>
